manifests/network/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls
  namespace: cilium
  annotations:
    external-dns.alpha.kubernetes.io/target: 'onode1.ucdialplans.com'
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.ucdialplans.com"
    allowedRoutes: 
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.ucdialplans.com"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: letsencrypt-wildcard-cert
        namespace: cilium
    allowedRoutes: 
      namespaces:
        from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: cilium
  annotations:
    external-dns.alpha.kubernetes.io/exclude: 'true'
spec:
  parentRefs:
  - name: tls
    sectionName: http
  hostnames:
  - "*.ucdialplans.com"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
